--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
 
     //added for jdbc driver for database operations
     implementation('net.sourceforge.jtds:jtds:1.3.1')
+
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
 }
